# d2-data-parser

./: README.md  pyproject.toml
d2_data_parser/: main.py  parse.py
